--- a/PaperConnect/war/PaperConnect.html
+++ b/PaperConnect/war/PaperConnect.html
@@ -25,6 +25,14 @@
 <!--                                           -->
 <script type="text/javascript" language="javascript"
 	src="paperconnect/paperconnect.nocache.js"></script>
+<script src="./build/sigma.min.js"></script>
+<script src="graph.js"></script>
+<style>
+#graphContainer {
+	width: 25%;
+	height: 25%;
+}
+</style>
 </head>
 
 <!--                                           -->
@@ -44,8 +52,8 @@
 
 	<h1>Paper Connect</h1>
 	<div id="paperList"></div>
+	<div id="graphContainer"></div>
 	<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1'
 		style="position: absolute; width: 0; height: 0; border: 0"></iframe>
-
 </body>
 </html>
