--- a/PaperConnect/war/PaperConnect.html
+++ b/PaperConnect/war/PaperConnect.html
@@ -23,10 +23,10 @@
 <!-- If you add any GWT meta tags, they must   -->
 <!-- be added before this line.                -->
 <!--                                           -->
-<script type="text/javascript" language="javascript"
+<script type="text/javascript"
 	src="paperconnect/paperconnect.nocache.js"></script>
 <script src="./build/sigma.min.js"></script>
-<script src="graph.js"></script>
+<script src="paperconnect.js"></script>
 </head>
 
 <!--                                           -->
@@ -44,7 +44,26 @@
 			application to display correctly.</div>
 	</noscript>
 
-	<h1>Paper Connect</h1>
+	<!-- 	<h1>Paper Connect</h1> -->
+	<div class="searchContainer">
+		<input id="searchBar" type="text" placeholder="Search keyword...">
+		<div class="search"></div>
+	</div>
+	<script>
+		var input = document.getElementById("searchBar");
+		input.addEventListener("keyup", function(event) {
+			if (event.keyCode === 13) {
+				event.preventDefault();
+				window.onSearchEnter(input.value);
+			}
+		});
+	</script>
+
+	<div class="container">
+		<ul id="paperTable" class="responsive-table">
+		</ul>
+	</div>
+
 	<div id="paperList"></div>
 	<div id="graphContainer"></div>
 	<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1'
