--- a/PaperConnect/war/PaperConnect.html
+++ b/PaperConnect/war/PaperConnect.html
@@ -43,7 +43,7 @@
 			Your web browser must have JavaScript enabled in order for this
 			application to display correctly.</div>
 	</noscript>
-
+	<div id="errorMessage"></div>
 	<!-- 	<h1>Paper Connect</h1> -->
 	<div class="searchContainer">
 		<input id="searchBar" type="text" placeholder="Search keyword...">
@@ -63,8 +63,6 @@
 		<ul id="paperTable" class="responsive-table">
 		</ul>
 	</div>
-
-	<div id="paperList"></div>
 	<div id="graphContainer"></div>
 	<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1'
 		style="position: absolute; width: 0; height: 0; border: 0"></iframe>
